--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ html, body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--primary-color);
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
 }
 body {
     display: grid;
